<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:cube_ptr="http://schemas.android.com/tools"
              android:id="@+id/view_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:background="@color/High_light_gray"
              android:orientation="vertical">
    <TextView
        android:id="@+id/tv_titles"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/video_main"
        android:gravity="center"
        android:text="@string/personal_center_title"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_18"/>
    <LinearLayout
        android:id="@+id/view_ly_container"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical">
        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_20"
            android:id="@+id/main_sdv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            fresco:actualImageScaleType="focusCrop"
            fresco:placeholderImage="@mipmap/btn_man"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:progressBarImage="@mipmap/btn_man"
            fresco:progressBarImageScaleType="centerInside"
            fresco:progressBarAutoRotateInterval="5000"
            fresco:failureImage="@mipmap/btn_man"
            fresco:failureImageScaleType="centerInside"
            fresco:retryImage="@mipmap/btn_man"
            fresco:retryImageScaleType="centerCrop"
            fresco:fadeDuration="5000"
            fresco:backgroundImage="@android:color/darker_gray"
            fresco:roundAsCircle="true"
            ></com.facebook.drawee.view.SimpleDraweeView>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:drawablePadding="@dimen/dp_6"
                android:drawableRight="@mipmap/btn_editor"
                android:id="@+id/name_edit_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/sp_17"
                android:textColorHint="@color/text_theme_black"
                android:textColor="@color/text_theme_black"/>
            <ImageView
                android:visibility="gone"
                android:padding="@dimen/dp_5"
                android:id="@+id/name_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/btn_editor"/>
        </LinearLayout>
        <TextView
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:id="@+id/personal_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_theme_black"
            android:textSize="@dimen/sp_15"
            android:text="手机号码："/>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/vip_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="会员期限:"
                android:textSize="@dimen/sp_15"
                android:textColorHint="@color/text_theme_black"
                android:textColor="@color/text_theme_black"/>
            <TextView
                android:gravity="center"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:id="@+id/vip_time_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:scaleType="centerInside"
                android:text="@string/insert_money"
                android:textSize="@dimen/sp14"
                android:textColor="@color/white"
                android:background="@color/personal_f44b62"/>
        </LinearLayout>

    </LinearLayout>




    <include layout="@layout/line_layout"/>
    <LinearLayout
        android:background="@color/white"
        android:clickable="true"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:id="@+id/personal_collect_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/personal_collect"
            android:layout_weight="1"
            android:textColor="@color/text_101010"
            android:textSize="@dimen/sp_15"/>
        <ImageView
            android:focusable="false"
            android:src="@drawable/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <include layout="@layout/line_layout"/>
    <LinearLayout
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:id="@+id/personal_clear_cache_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/clear_cache"
            android:layout_weight="1"
            android:textColor="@color/text_101010"
            android:textSize="@dimen/sp_15"/>
        <TextView
            android:id="@+id/cache_size"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/main_text_gray"
            android:textSize="@dimen/sp_15"
            android:text="0.0M"
            />
    </LinearLayout>
    <include layout="@layout/line_layout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:background="@color/High_light_gray"/>
    <include layout="@layout/line_layout"/>
    <Button
        android:id="@+id/btn_exit"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:textColor="@color/main_text_gray"
        android:textSize="@dimen/sp_15"
        android:text="@string/exit_login"/>
</LinearLayout>
